<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ViewFlipper
        android:id="@+id/card_flipper"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:ignore="UselessParent">

        <!-- Layout da Frente do Cartão -->
        <RelativeLayout
            android:id="@+id/card_front"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/rounded_card_background"
            android:padding="16dp"
            android:elevation="4dp">

            <!-- Chip do cartão -->
            <ImageView
                android:id="@+id/card_chip"
                android:layout_width="38dp"
                android:layout_height="36dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_chip" />

            <!-- Icone de Pagamento Contactless -->
            <ImageView
                android:id="@+id/contactless_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_toEndOf="@id/card_chip"
                android:layout_marginStart="10dp"
                android:layout_alignTop="@id/card_chip"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_contactless" />

            <!-- Logo do Nubank e Nome do Titular -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/logo_nubank"
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:src="@drawable/logo_nubank"
                    android:importantForAccessibility="no"
                    android:layout_marginTop="-15dp"
                    android:layout_marginEnd="5dp" />

                <TextView
                    android:id="@+id/cardholder_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/name"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Logo da Mastercard -->
            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="2dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_mastercard_logo" />

        </RelativeLayout>

        <!-- Layout do Verso do Cartão -->
        <RelativeLayout
            android:id="@+id/card_back"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="0dp"
            android:elevation="4dp">

            <!-- Texto Adicional -->
            <ImageView
                android:id="@+id/card_brand"
                android:layout_width="70dp"
                android:layout_height="85dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="112dp"
                android:layout_marginEnd="10dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_mastercard_logo" />

            <!-- Emissor do Cartão -->
            <TextView
                android:id="@+id/issued_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/card_brand"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:text="@string/issued_by_nubank_under_licence_mastercard_internacional"
                android:textColor="#FFFFFF"
                android:textSize="5sp"
                tools:ignore="SmallSp" />

            <!-- Faixa Magnética -->
            <View
                android:id="@+id/magnetic_strip"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="12dp"
                android:background="#a9a9a9" />

            <!-- Número do Cartão -->
            <TextView
                android:id="@+id/card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/magnetic_strip"
                android:layout_marginStart="15dp"
                android:layout_marginTop="78dp"
                android:text="@string/card_number"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Dados do Cartão (Member Since, Validade, Código de Segurança) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_number"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <!-- Member Since -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/member"
                        android:textColor="#FFFFFF"
                        android:textSize="3sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/since"
                        android:textColor="#FFFFFF"
                        android:textSize="3sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>

                <!-- Validade do Cartão -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/valid"
                        android:textColor="#FFFFFF"
                        android:textSize="3sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="#FFFFFF"
                        android:textSize="3sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>

                <!-- Código de Segurança -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/security"
                        android:textColor="#FFFFFF"
                        android:textSize="3sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/code"
                        android:textColor="#FFFFFF"
                        android:textSize="3sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ViewFlipper>
</RelativeLayout>
